--- a/mycv.tex
+++ b/mycv.tex
@@ -9,10 +9,17 @@
 
 \newcommand{\name}{James Mueller}
 \newcommand{\email}{jmuel11@gmail.com}
+\newcommand{\github}{github.com/jmuel}
 \newcommand{\phone}{573-881-2018}
 
 \newcommand{\bigname}[1]{
     \begin{center}\fontfamily{phv}\selectfont\Huge\scshape#1\end{center}
+}
+
+\newcommand{\contact}[5]{
+  \center{ #1 {\large\textperiodcentered} #2 {\large\textperiodcentered} #3}
+  \center{ {\large} #4 {\large} #5}
+  \vspace{8pt}  
 }
 
 \newenvironment{ressection}[1]{
@@ -69,18 +76,16 @@
 \vspace{-8pt}\rule{\textwidth}{1pt}
 
 %%\vspace{-1pt}{\small\itshape \email}
-\begin{center}
-    \small\itshape \email
-\end{center}
-\vspace{8 pt}
-
+\contact{2601 Ridgefield Rd}{Columbia, MO 65203}{573-881-2018}{github.com/jmuel}{jmuel11@gmail.com}
 
 \begin{ressection}{Experience}
     \begin{ressubsec}{Carfax}{Columbia, MO}{Software Developer: May 2013 to Present}
         \ressubitem{Technologies: Java, Groovy, Javascript, Grails, Spring, Oracle Sql, MySQL, RabbitMQ}  
-        \ressubitem{Worked as part of an agile team to deliver software to fulfill customer requirements in weekly and biweekly sprints}
-        \ressubitem{Responsible for all parts of the development process outside of hardware set up. Designed system architectures, set up message consumers and producers, designed database schemas, wrote batch processes and developed by server-side and client-side aspects of the web applications}
+        \ressubitem{Lead developer on a team of eight} 
+        \ressubitem{Worked as part of an agile team to deliver software to fulfill customer requirements in sprints}
+        \ressubitem{Responsible for all parts of the development process outside of hardware set up. Designed data stores, wrote batch processes, built front-end applications and helped architect the designs to bring it all together}
         \ressubitem{A team based environment emphasized working closely with other developers in the day to day development. Heavy use of paired programming and TDD to ensure code standards were maintained}
+        \ressubitem{Set up private NPM and Bower repositories and instructed other developers in best practices for these}
     \end{ressubsec}
     \begin{ressubsec}{Amdocs}{St Louis, MO}{Software Developer: May 2012 to May 2013}
         \ressubitem{Technologies: PHP, Javascript, MySQL}
@@ -95,16 +100,35 @@
     \end{ressubsec}
 \end{ressection}
 
+\begin{ressection}{Conferences}
+    \begin{ressubsec}{OSCON}{}{July 2014}
+        \ressubitem{Focused on Data Stores and Javascript tracks}
+    \end{ressubsec}
+    \begin {ressubsec}{Rich Web}{}{December 2013 and 2014}
+      \ressubitem{This was very focused on }
+    \end{ressubsec}
+    \begin{ressubsec}{Strange Loop}{}{September 2014}
+      \ressubitem{}
+    \end{ressubsec}
+\end{ressection}
+
+\begin{ressection}{Side Projects}
+  \begin{ressubsec}{League App}{}{https://github.com/jmuel/LeagueApp}
+    \ressubitem{A small app that gave me a chance to play around with React and Flux. It hits Riot Games' League of Legends API and displays player data.}
+    \ressubitem{Also included https://github.com/jmuel/RiotApiCache which acted as a backend that cached requests so Riot's API wouldn't lock you out for hitting it too frequently.}
+  \end{ressubsec}
+  \begin{ressubsec}{Pokemon Stats Visualizer}{}{https://github.com/jmuel/PokemonVisualizer}
+    \ressubitem{}
+  \end{ressubsec}
+\end{ressection}
+
 \begin{ressection}{Skills and Interests}
     \begin{reslist}{Computer Languages}
-        \ressubitem{\textbf{Proficient:} Java, Groovy, Oracle Sql, MySQL, Javascript, Html, CSS}
-        \ressubitem{\textbf{Familiar:} Python, PHP, MySQL, Mongo, C, C++}
-    \end{reslist}
-    \begin{reslist}{Tools}
-        \ressubitem{IntelliJ, Eclipse, SublimeText, Sql Developer, Control M, Vim}
+        \ressubitem{\textbf{Significant:} Java, Javascrip, Groovy, Oracle Sql, MySQL, Html, CSS}
+        \ressubitem{\textbf{Proficient:} Python, PHP, MySQL, Mongo, C, C++}
     \end{reslist}
     \begin{reslist}{Interests}
-        \ressubitem{Big Data, Front End Design, Functional Programming}
+        \ressubitem{Front End Design, Functional Programming, ReactJS}
     \end{reslist}
 \end{ressection}
 
