--- a/mycv.tex
+++ b/mycv.tex
@@ -98,18 +98,12 @@
     \begin{ressubsec}{Iowa State University}{Ames, IA}{2007 to 2011}
         \ressubitem{Completed BS in Computer Engineering}
     \end{ressubsec}
-\end{ressection}
+  \begin{ressubsec}{Conferences}{}{}
+    \ressubitem{Strange Loop - 2014}
+    \ressubitem{Rich Web - 2013 and 2014}
+    \ressubitem{OSCON - 2014}
+  \end{ressubsec}  
 
-\begin{ressection}{Conferences}
-    \begin{ressubsec}{OSCON}{}{July 2014}
-        \ressubitem{Focused on Data Stores and Javascript tracks}
-    \end{ressubsec}
-    \begin {ressubsec}{Rich Web}{}{December 2013 and 2014}
-      \ressubitem{This was very focused on }
-    \end{ressubsec}
-    \begin{ressubsec}{Strange Loop}{}{September 2014}
-      \ressubitem{}
-    \end{ressubsec}
 \end{ressection}
 
 \begin{ressection}{Side Projects}
@@ -118,7 +112,7 @@
     \ressubitem{Also included https://github.com/jmuel/RiotApiCache which acted as a backend that cached requests so Riot's API wouldn't lock you out for hitting it too frequently.}
   \end{ressubsec}
   \begin{ressubsec}{Pokemon Stats Visualizer}{}{https://github.com/jmuel/PokemonVisualizer}
-    \ressubitem{}
+    \ressubitem{I'm playing around with using React for data visualization. It's an obvious candidate for a d3 replacement because of how it also solves the problem of keeping data in sync with html elements (in the case of graphs, SVG elements). I'm also using this as a chance to try out MartyJS, which is an interesting flux implementation that seems to have a lot of good ideas.}
   \end{ressubsec}
 \end{ressection}
 
