down to one page

--- a/mycv.tex
+++ b/mycv.tex
@@ -81,10 +81,9 @@
 \begin{ressection}{Experience}
     \begin{ressubsec}{Carfax}{Columbia, MO}{Software Developer: May 2013 to Present}
         \ressubitem{Technologies: Java, Groovy, Javascript, Grails, Spring, Oracle Sql, MySQL, RabbitMQ}  
+        \ressubitem{Full stack developer}
         \ressubitem{Lead developer on a team of eight} 
         \ressubitem{Worked as part of an agile team to deliver software to fulfill customer requirements in sprints}
-        \ressubitem{Responsible for all parts of the development process outside of hardware set up. Designed data stores, wrote batch processes, built front-end applications and helped architect the designs to bring it all together}
-        \ressubitem{A team based environment emphasized working closely with other developers in the day to day development. Heavy use of paired programming and TDD to ensure code standards were maintained}
         \ressubitem{Set up private NPM and Bower repositories and instructed other developers in best practices for these}
     \end{ressubsec}
     \begin{ressubsec}{Amdocs}{St Louis, MO}{Software Developer: May 2012 to May 2013}
