--- a/mycv.tex
+++ b/mycv.tex
@@ -79,7 +79,14 @@
 \contact{2601 Ridgefield Rd}{Columbia, MO 65203}{573-881-2018}{github.com/jmuel}{jmuel11@gmail.com}
 
 \begin{ressection}{Experience}
-    \begin{ressubsec}{Carfax}{Columbia, MO}{Software Developer: May 2013 to Present}
+		\begin{ressubsec}{Carlypso}{San Francisco, CA}{Software Developer: August 2015 to Present}
+			\ressubitem{Technologies: Javascript, NodeJS, Mongo, AWS}
+			\ressubitem{Back-End Developer}
+			\ressubitem{Built tools for Marketing and Sales. These tools took processes from 10+ hours to seconds}
+			\ressubitem{Architected and built solutions to provide the front end with Carl Listings}
+			\ressubitem{Helped build and maintain database structures and schemas using Mongo and Mongoose}
+		\end{ressubsec}
+    \begin{ressubsec}{Carfax}{Columbia, MO}{Software Developer: May 2013 to July 2015}
         \ressubitem{Technologies: Java, Groovy, Javascript, Grails, Spring, Oracle Sql, MySQL, RabbitMQ}  
         \ressubitem{Full stack developer}
         \ressubitem{Lead developer on a team of eight} 
@@ -100,19 +107,10 @@
   \begin{ressubsec}{Conferences}{}{}
     \ressubitem{Strange Loop - 2014}
     \ressubitem{Rich Web - 2013 and 2014}
-    \ressubitem{OSCON - 2014}
+    \ressubitem{OSCON - 2014 and 2015}
+		\ressubitem{KCDC - 2015, Gave a talk on Isomporphic webapps with React}
   \end{ressubsec}  
 
-\end{ressection}
-
-\begin{ressection}{Side Projects}
-  \begin{ressubsec}{League App}{}{https://github.com/jmuel/LeagueApp}
-    \ressubitem{A small app that gave me a chance to play around with React and Flux. It hits Riot Games' League of Legends API and displays player data.}
-    \ressubitem{Also included https://github.com/jmuel/RiotApiCache which acted as a backend that cached requests so Riot's API wouldn't lock you out for hitting it too frequently.}
-  \end{ressubsec}
-  \begin{ressubsec}{Pokemon Stats Visualizer}{}{https://github.com/jmuel/PokemonVisualizer}
-    \ressubitem{I'm playing around with using React for data visualization. It's an obvious candidate for a d3 replacement because of how it also solves the problem of keeping data in sync with html elements (in the case of graphs, SVG elements). I'm also using this as a chance to try out MartyJS, which is an interesting flux implementation that seems to have a lot of good ideas.}
-  \end{ressubsec}
 \end{ressection}
 
 \begin{ressection}{Skills and Interests}
